# ChangeLog for app-portage/layman
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.202 2014/07/28 20:37:16 zlogene Exp $

  28 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> layman-2.0.0-r3.ebuild:
  ppc64 stable wrt bug #508882

*layman-2.1.0-r2 (28 Jul 2014)

  28 Jul 2014; Devan Franchini <twitch153@gentoo.org> +layman-2.1.0-r2.ebuild,
  -layman-2.1.0-r1.ebuild:
  Removes asciidoc from DEPEND

*layman-2.1.0-r1 (27 Jul 2014)

  27 Jul 2014; Devan Franchini <twitch153@gentoo.org>
  +files/layman-2.1.0-local_overlay.patch, +layman-2.1.0-r1.ebuild,
  -layman-2.1.0.ebuild:
  Rev bump to add patch for local overlay listings

*layman-2.1.0 (24 Jul 2014)

  24 Jul 2014; Devan Franchini <twitch153@gentoo.org> +layman-2.1.0.ebuild:
  Bumps version for new release

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> layman-2.0.0-r1.ebuild,
  layman-2.0.0-r3.ebuild, layman-9999.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  16 Jun 2014; Brian Dolbec <dolsen@gentoo.org> layman-9999.ebuild:
  Udate for new dependencies.

  17 May 2014; Agostino Sarubbo <ago@gentoo.org> layman-2.0.0-r3.ebuild:
  Stable for alpha, wrt bug #508882

  14 May 2014; Agostino Sarubbo <ago@gentoo.org> layman-2.0.0-r3.ebuild:
  Stable for sparc, wrt bug #508882

  13 May 2014; Agostino Sarubbo <ago@gentoo.org> layman-2.0.0-r3.ebuild:
  Stable for ia64, wrt bug #508882

  10 May 2014; Agostino Sarubbo <ago@gentoo.org> layman-2.0.0-r3.ebuild:
  Stable for ppc, wrt bug #508882

  03 May 2014; Markus Meier <maekke@gentoo.org> layman-2.0.0-r3.ebuild:
  arm stable, bug #508882

  29 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> layman-2.0.0-r3.ebuild:
  x86 stable wrt bug #508882

  29 Apr 2014; Mikle Kolyada <zlogene@gentoo.org> layman-2.0.0-r3.ebuild:
  amd64 stable wrt bug #508882
