@@ -6,13 +6,19 @@
 		<email>dolsen@gentoo.org</email>
 		<name>Brian Dolbec</name>
 	</maintainer>
+	<maintainer>
+		<email>twitch153@gentoo.org</email>
+		<name>Devan Franchini</name>
+	</maintainer>
 	<use>
 		<flag name="bazaar">Support <pkg>dev-vcs/bzr</pkg> based overlays</flag>
 		<flag name="cvs">Support <pkg>dev-vcs/cvs</pkg> based overlays</flag>
 		<flag name="darcs">Support <pkg>dev-vcs/darcs</pkg> based overlays</flag>
+		<flag name="g-sorcery">Support <pkg>app-portage/g-sorcery</pkg> based overlays</flag>
 		<flag name="git">Support <pkg>dev-vcs/git</pkg> based overlays</flag>
 		<flag name="gpg">Support <pkg>app-crypt/gnupg</pkg> signed overlays lists and manifests</flag>
 		<flag name="mercurial">Support <pkg>dev-vcs/mercurial</pkg> based overlays</flag>
+		<flag name="squashfs">Support mounting squashfs image overlays locally read-only</flag>
 		<flag name="subversion">Support <pkg>dev-vcs/subversion</pkg> based overlays</flag>
 	</use>
 </pkgmetadata>
