@@ -1042,9 +1042,11 @@ app-portage/eix:tools - Create separate binary for script helper tools; useful i
 app-portage/layman:bazaar - Support dev-vcs/bzr based overlays
 app-portage/layman:cvs - Support dev-vcs/cvs based overlays
 app-portage/layman:darcs - Support dev-vcs/darcs based overlays
+app-portage/layman:g-sorcery - Support app-portage/g-sorcery based overlays
 app-portage/layman:git - Support dev-vcs/git based overlays
 app-portage/layman:gpg - Support app-crypt/gnupg signed overlays lists and manifests
 app-portage/layman:mercurial - Support dev-vcs/mercurial based overlays
+app-portage/layman:squashfs - Support mounting squashfs image overlays locally read-only
 app-portage/layman:subversion - Support dev-vcs/subversion based overlays
 app-portage/pfl:network-cron - Adds a cron job which does a weekly submit of the package database
 app-portage/tatt:templates - Install template scripts to be used with tatt
